--- a/app/src/main/res/menu/menu_bottom_navigation_view.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation_view.xml
@@ -25,5 +25,11 @@
         android:icon="@mipmap/ic_launcher_round"
         android:title="4"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/item_bottom_5"
+        android:enabled="true"
+        android:icon="@mipmap/ic_launcher_round"
+        android:title="4"
+        app:showAsAction="ifRoom" />
 
 </menu>
